--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
   padding: 10px;
 }
 
-.mnav{
+.mnav {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -44,11 +44,35 @@
   left: 0;
 }
 
+.program-card i {
+  width: 15%;
+  color: #fff;
+  font-size: 28px;
+  text-align: center;
+}
+
+.more i {
+  color: #ec5242;
+}
+
+.partner li {
+  color: #d3d3d3;
+  list-style: none;
+  font-size: 24px;
+}
+
 .mobile-nav nav i {
   font-size: 28px;
   position: absolute;
   top: 1em;
   right: 1em;
+}
+
+.partner ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .mobile-nav nav ul {
@@ -59,7 +83,7 @@
   margin-left: 2em;
 }
 
-.mobile-nav nav ul li{
+.mobile-nav nav ul li {
   list-style: none;
 }
 
@@ -68,6 +92,7 @@
   font-size: 28px;
   font-weight: 600;
 }
+
 /* mobile menu */
 
 .hero-section {
@@ -114,7 +139,7 @@
 }
 
 .venue {
-  margin: .5em 0;
+  margin: 0.5em 0;
   font-size: 16px;
   font-weight: 600;
 }
@@ -124,7 +149,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: .5em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -141,7 +165,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: .7em;
+  gap: 0.7em;
   margin: 2.5em 0;
 }
 
@@ -151,7 +175,7 @@
   justify-content: center;
   gap: 10px;
   align-items: center;
-  padding: .5em;
+  padding: 0.5em;
   height: 100%;
   width: 90%;
 }
@@ -166,13 +190,6 @@
   color: #fff;
   font-size: 16px;
   width: 50%;
-}
-
-.program-card i {
-  width: 15%;
-  color: #fff;
-  font-size: 28px;
-  text-align: center;
 }
 
 .join {
@@ -216,7 +233,7 @@
 .speaker-card {
   width: 90%;
   height: 100%;
-  padding: .7em .3em;
+  padding: 0.7em 0.3em;
   display: flex;
   align-items: center;
   background-color: #fff;
@@ -231,7 +248,7 @@
 }
 
 .img {
- width: 12%;
+  width: 12%;
 }
 
 .img img {
@@ -270,13 +287,9 @@
   font-size: 18px;
   border: 1px solid #272a31;
   text-align: center;
-  padding: .5em .5em;
+  padding: 0.5em 0.5em;
   text-transform: uppercase;
   display: block;
-}
-
-.more i {
-  color: #ec5242;
 }
 
 .before-expand {
@@ -286,7 +299,6 @@
 .after-expand {
   display: none;
 }
-
 
 .partner {
   background-color: #272a31;
@@ -300,19 +312,6 @@
 
 .partner-title {
   color: #fff;
-  font-size: 24px;
-}
-
-.partner ul {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
-.partner li {
-  color: #d3d3d3;
-  list-style: none;
   font-size: 24px;
 }
 
@@ -334,7 +333,7 @@ footer {
 }
 
 .p-desk {
-  display:none;
+  display: none;
 }
 
 /* about page */
@@ -345,7 +344,7 @@ footer {
 .about-container {
   display: flex;
   flex-direction: column;
-  gap: .5em;
+  gap: 0.5em;
   align-items: center;
   justify-content: center;
 }
@@ -362,7 +361,7 @@ footer {
 .hello {
   color: #ec5242;
   font-size: 28px;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 .about-hero h1 {
@@ -447,11 +446,11 @@ footer {
   width: 400px;
   height: 250px;
   background-image:
-  linear-gradient(
-    rgba(255, 0, 0, 0.45), 
-    rgba(255, 0, 0, 0.45)
-  ),
-   url(../images/friends-enjoying-hot-coffee.jpg);
+    linear-gradient(
+      rgba(255, 0, 0, 0.45),
+      rgba(255, 0, 0, 0.45)
+    ),
+    url(../images/friends-enjoying-hot-coffee.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -466,11 +465,11 @@ footer {
   width: 400px;
   height: 250px;
   background-image:
-  linear-gradient(
-    rgba(255, 0, 0, 0.45), 
-    rgba(255, 0, 0, 0.45)
-  ),
-   url(../images/happy-diverse-friends.jpg);
+    linear-gradient(
+      rgba(255, 0, 0, 0.45),
+      rgba(255, 0, 0, 0.45)
+    ),
+    url(../images/happy-diverse-friends.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -492,7 +491,7 @@ footer {
 /* about page */
 
 /* media query for screen above 768px */
-@media only screen and (min-width:768px){
+@media only screen and (min-width: 768px) {
   /* nav menu */
   #hambuger {
     display: none;
@@ -513,7 +512,7 @@ footer {
     padding-right: 18%;
   }
 
-  .header li{
+  .header li {
     list-style: none;
     font-size: 14px;
     font-weight: 600;
@@ -564,7 +563,7 @@ footer {
     margin-left: 35px;
     white-space: nowrap;
     border: 3px solid #ec5242;
-    padding: .5em .5em;
+    padding: 0.5em 0.5em;
   }
 
   /* hero section */
@@ -626,36 +625,33 @@ footer {
     flex-direction: column;
     align-items: center;
     gap: 1.5em;
-    align-items: center;
     width: 188px;
     height: 190px;
     margin: 0;
-    text-align: center;
   }
 
   .program-card:hover {
     border: 2px solid #fff;
   }
 
+  .program-card h3 {
+    color: #ec5242;
+    font-size: 19px;
+    width: 95%;
+  }
 
-.program-card h3 {
-  color: #ec5242;
-  font-size: 19px;
-  width: 95%;
-}
+  .program-card p {
+    color: #fff;
+    font-size: 14px;
+    width: 99%;
+  }
 
-.program-card p {
-  color: #fff;
-  font-size: 14px;
-  width: 99%;
-}
-
-.program-card i {
-  width: 95%;
-  color: #fff;
-  font-size: 34px;
-  padding-left: 15px;
-}
+  .program-card i {
+    width: 95%;
+    color: #fff;
+    font-size: 34px;
+    padding-left: 15px;
+  }
 
   .join {
     display: none;
@@ -679,52 +675,52 @@ footer {
     padding: 0;
     width: 70%;
   }
-  
+
   .speaker-card {
     width: 48%;
     height: 100%;
     display: flex;
     align-items: center;
-    background-color: #ffffff;
-    padding: .6em .2em;
+    background-color: #fff;
+    padding: 0.6em 0.2em;
   }
-  
+
   .speaker-card:nth-child(n+3) {
     display: flex;
   }
 
   .img {
-   width: 12%;
+    width: 12%;
   }
-  
+
   .img img {
     width: 90px;
     height: 90px;
     object-fit: cover;
   }
-  
+
   .speaker-card-content {
     width: 90%;
     display: flex;
     flex-direction: column;
     gap: 5px;
   }
-  
+
   .speaker-title {
     font-size: 22px;
   }
-  
+
   .red em {
     color: #ec5242;
     font-size: 16px;
     margin-bottom: 5px;
   }
-  
+
   .speaker-card-content p {
     font-size: 15px;
     margin-top: 5px;
   }
-  
+
   .disappear {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -751,7 +747,7 @@ footer {
 
   .about-hero {
     height: 90vh;
-    padding: .5em 0;
+    padding: 0.5em 0;
     justify-content: flex-start;
   }
 
@@ -776,5 +772,6 @@ footer {
   .contact-email {
     margin-bottom: 1em;
   }
+
   /* about page */
 }
